--- a/FriendFinder/app/src/main/res/layout/activity_main.xml
+++ b/FriendFinder/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
         android:text="If you already have an account:"/>
 
     <EditText
-        android:id="@+id/et_login_username"
+        android:id="@+id/et_login_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin"
-        android:hint="@string/username"
+        android:hint="@string/email"
         android:layout_gravity="center"
         android:inputType="textPersonName" />
 
@@ -51,12 +51,12 @@
         android:text="If not, create one:"/>
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin"
         android:layout_gravity="center"
-        android:hint="@string/username"
+        android:hint="@string/email"
         android:inputType="textPersonName" />
 
     <EditText
